--- a/package.json
+++ b/package.json
@@ -40,41 +40,42 @@
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.5.8",
     "@tarojs/helper": "3.5.8",
-    "@tarojs/plugin-platform-weapp": "3.5.8",
+    "@tarojs/plugin-framework-react": "3.5.8",
     "@tarojs/plugin-platform-alipay": "3.5.8",
-    "@tarojs/plugin-platform-tt": "3.5.8",
-    "@tarojs/plugin-platform-swan": "3.5.8",
     "@tarojs/plugin-platform-jd": "3.5.8",
     "@tarojs/plugin-platform-qq": "3.5.8",
+    "@tarojs/plugin-platform-swan": "3.5.8",
+    "@tarojs/plugin-platform-tt": "3.5.8",
+    "@tarojs/plugin-platform-weapp": "3.5.8",
+    "@tarojs/react": "3.5.8",
     "@tarojs/router": "3.5.8",
     "@tarojs/runtime": "3.5.8",
     "@tarojs/shared": "3.5.8",
     "@tarojs/taro": "3.5.8",
     "@tarojs/taro-h5": "3.5.8",
-    "@tarojs/plugin-framework-react": "3.5.8",
-    "@tarojs/react": "3.5.8",
+    "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react": "^18.0.0"
+    "taro-ui": "^2.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.5.8",
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^18.0.0",
-    "webpack": "5.69.0",
-    "@tarojs/webpack5-runner": "3.5.8",
-    "babel-preset-taro": "3.5.8",
-    "eslint-config-taro": "3.5.8",
-    "eslint": "^8.12.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "react-refresh": "^0.11.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "^14.4.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@tarojs/cli": "3.5.8",
+    "@tarojs/webpack5-runner": "3.5.8",
+    "@types/react": "^18.0.0",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0"
+    "@typescript-eslint/parser": "^5.20.0",
+    "babel-preset-taro": "3.5.8",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "3.5.8",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react-refresh": "^0.11.0",
+    "stylelint": "^14.4.0",
+    "typescript": "^4.1.0",
+    "webpack": "5.69.0"
   },
   "config": {
     "commitizen": {
