--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@linaria/babel-preset": "^4.3.1",
+    "@linaria/core": "^4.2.3",
+    "@linaria/react": "^4.3.1",
     "@tarojs/components": "3.5.8",
     "@tarojs/helper": "3.5.8",
     "@tarojs/plugin-framework-react": "3.5.8",
