--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@tarojs/taro-h5": "3.5.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "taro-ui": "^2.3.4"
+    "taro-ui": "3.1.0-beta.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
