--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@linaria/babel-preset": "^4.3.1",
     "@linaria/core": "^4.2.3",
     "@linaria/react": "^4.3.1",
+    "@linaria/webpack-loader": "^4.1.9",
     "@tarojs/components": "3.5.8",
     "@tarojs/helper": "3.5.8",
     "@tarojs/plugin-framework-react": "3.5.8",
