--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tarojs/taro-h5": "3.5.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "recoil": "^0.7.6",
     "taro-ui": "3.1.0-beta.4"
   },
   "devDependencies": {
