--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,13 @@
   "extends": ["taro/react"],
   "rules": {
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "jsx-quotes":"none",
+      "react/self-closing-comp": "error",
+      "react/prop-types": "off",
+      "react-hooks/rules-of-hooks": "error",
+      "@typescript-eslint/no-empty-interface": "off",
+      "@typescript-eslint/no-unused-vars": "off",
+      "@typescript-eslint/no-explicit-any": "off",
   }
 }
